<resources>
    <string name="app_name">LaughLines</string>

    <string name="error">Error</string>
    <string name="your_email_or_password_is_incorrect">Your email or password is incorrect.</string>
    <string name="try_again">Try again</string>
    <string name="new_password">New password:</string>
    <string name="new_password_message">Enter your new password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_new_password">Confirm new password:</string>
    <string name="confirm_new_password_message">Confirm your new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="save">Save</string>
    <string name="change_your_password">Change your password</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change your email</string>
    <string name="change_phone_number">Change your phone number:</string>
    <string name="change_avatar">Change your avatar:</string>
    <string name="change_name">Change your name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_new_email">Enter your new email</string>
    <string name="enter_your_phone_number">Enter your new phone number</string>
    <string name="change_information">Change information</string>
    <string name="text_register">Get chatting with friends and family today by signing up for our chat app!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_number_phone">Enter your number phone</string>
    <string name="incorrect_format">Incorrect format, please try again</string>
    <string name="create_account">Create your account</string>
    <string name="register_account">Register account</string>
    <string name="create_account_successful">You have successfully registered an account!</string>
    <string name="cannot_be_left_blank">Can\'t be left blank</string>
    <string name="doesnot_match_the_password">Doesn\'t match the password</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="text_signin">Welcome back! Sign in using your email to continue us</string>
    <string name="remember">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="great_time">Great time</string>
    <string name="with_your_friends">with your friends</string>
    <string name="text_start">Our chat app is the perfect way to stay connected with friends and family.</string>
    <string name="text_start_2">Sign in or register an account to take quiz, take part in challenge, and more.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="chat_with_bot">Chat with Gemini AI</string>
    <string name="morse_code">Morse code</string>
    <string name="qr_code">QR code</string>
    <string name="sign_out">Sign out</string>
    <string name="scan_result">Scan result</string>
    <string name="start">Start</string>
    <string name="off">Off</string>
    <string name="please_fill_in_this_box">Please fill in this box</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="transmit">Transmit</string>
    <string name="your_text">Your text</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="qr_code_generator">QR Code Generator</string>
    <string name="text_qr">Insert the QR code into the scanning position, the scanning process will be performed automatically.</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="gallery">Gallery</string>
    <string name="share">Share</string>
    <string name="text_share">Share your QR code to make friends with everyone</string>
    <string name="text_save">Save your QR code to the gallery</string>
    <string name="loading">Loading…</string>
    <string name="text_warning_home">You don\'t have any chats yet, click here to find more friends.</string>
    <string name="message">Message</string>
    <string name="calls">Calls</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="my_status">My status</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="add_friend">Add friend</string>
    <string name="qr_error">An error occurred, please try again</string>
    <string name="request_successful">Request Successful</string>
    <string name="the_request_has_been_sent">The request has been sent</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="request">Request</string>
    <string name="no_request">You don\'t have any friend requests, please come back later.</string>
    <string name="deleted_successful">Deleted successful</string>
    <string name="accept_successful">Accepted successful</string>
    <string name="update_successful">Update successful</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="search">Search…</string>
    <string name="contact_empty">You are not connected to anyone yet. Use the Qr Code feature to connect with friends.</string>
    <string name="information">Information</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="text_delete_friend">If you do this, all messages between the two of you will be deleted. Are you sure you will unfriend this friend?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="not_found">Not found</string>
    <string name="this_action_cannot_be_performed">This action cannot be performed</string>
    <string name="what_are_you_thinking">What are you thinking?</string>
    <string name="send_message">Send message…</string>
    <string name="location_sharing">Location sharing</string>
    <string name="share_content">Share Content</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="choose_photo_from_gallery">Choose photo from gallery</string>
    <string name="share_your_location">Share your location</string>
    <string name="requested_permission_message">This feature is unavailable because this feature requires permission that you have denied. Please allow this permission from settings to proceed further.</string>
    <string name="requested_permission_title">Permission Required</string>
    <string name="take_photos_successfully">Take a photo successfully!</string>
    <string name="permission_setting">Settings</string>
    <string name="see_the_way">See the way</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_wait_a_moment">Please wait a moment</string>
    <string name="text_no_compass">Your device has no magnetometer sensor because of that you cannot use compass and level meter</string>
    <string name="you_have_made_friends_with_this_person">You have made friends with this person.</string>
</resources>