<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/jungle_green"
        tools:context=".ui.contacts.ContactFragment">

        <ImageView
            android:id="@+id/btnSearch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="5dp"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/contacts"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/btnSearch"
            app:layout_constraintTop_toTopOf="@id/btnSearch" />

        <ImageView
            android:id="@+id/btnAddFriend"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:src="@drawable/ic_user_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_white_corner_20"
            android:hint="@string/search"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:scrollbarSize="1dp"
            android:scrollbars="horizontal"
            android:textColor="@color/black"
            android:textColorHint="@color/davy_grey"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btnSearch"
            app:layout_constraintEnd_toStartOf="@id/btnSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnSearch" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSearch">

            <TextView
                android:id="@+id/tvContactEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center_horizontal"
                android:text="@string/contact_empty"
                android:textColor="@color/davy_grey"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNotFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center_horizontal"
                android:text="@string/not_found"
                android:textColor="@color/davy_grey"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/rcv"
                android:overScrollMode="never"
                android:paddingHorizontal="6dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="2"
                tools:listitem="@layout/item_contact" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>